--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_USER="psql"
 POSTGRES_PASSWORD="senha"
 POSTGRES_DB="psqldb"
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="psql-db"
 POSTGRES_PORT="5432"
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
