--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,12 @@ services:
       psql-db:
         condition: service_healthy
     environment:
-      RDS_USERNAME: ${POSTGRES_USER}
-      RDS_PASSWORD: ${POSTGRES_PASSWORD}
-      RDS_HOSTNAME: ${POSTGRES_HOST}
-      RDS_PORT: ${POSTGRES_PORT}
-      RDS_DB_NAME: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_DB: ${POSTGRES_DB}
+      DATABASE_URL: ${DATABASE_URL}
     volumes:
       - ./backend:/app
 
