--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/fin-trace",
+            "outputPath": "dist/balcaouff",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
