--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -5,13 +5,13 @@ FROM node:16 AS build
 WORKDIR /app
 
 # Copiar os arquivos package.json e package-lock.json
-COPY FinTrace/package*.json ./
+COPY frontend/package*.json ./
 
 # Instalar as dependências do Angular
 RUN npm install
 
 # Copiar o restante do código da aplicação
-COPY FinTrace/ ./
+COPY frontend/ ./
 
 # Criar o build da aplicação Angular
 RUN npm run build --prod
@@ -20,10 +20,10 @@ RUN npm run build --prod
 FROM nginx:alpine
 
 # Copiar os arquivos de build para o NGINX
-COPY --from=build /app/dist/fin-trace /usr/share/nginx/html
+COPY --from=build /app/dist/balcaouff /usr/share/nginx/html
 
 # Copiar o arquivo de configuração do NGINX com proxy reverso
-COPY FinTrace/nginx.conf /etc/nginx/nginx.conf
+COPY frontend/nginx.conf /etc/nginx/nginx.conf
 
 # Expor a porta 80 (NGINX)
 EXPOSE 80
