--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,7 +21,7 @@ http {
 
         # Configuração de proxy para o backend na porta 8080
         location /api/ {
-            proxy_pass http://fintrace-backend-1:8080;
+            proxy_pass http://flask-backend:5050;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
