--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ backend/__pycache__
 backend/routes/__pycache__
 backend/controller/__pycache__
 backend/models/__pycache__
+
+# Análise estática de código
+.vscode
