--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^15.4.1",
     "rxjs": "~7.5.0",
+    "swiper": "^11.1.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
